--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: My Portfolio
 description: "My personal portfolio showcasing my skills and projects."
 baseurl: "" 
-url: "https://Justin-Praseuthsouk.github.io"
+url: "https://justinpras.github.io"
